--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dependencies": {
         "grunt": "*",
         "grunt-contrib-less": "*",
+        "grunt-contrib-csslint": "*",
         "grunt-contrib-cssmin": "*",
         "grunt-contrib-watch": "*",
         "grunt-contrib-copy": "*",
