--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Grunt-Workflow",
+  "name": "grunt-workflow",
   "version": "0.0.1",
   "authors": [
     "hzlzh <hzlzh.dev@gmail.com>"
