--- a/package.json
+++ b/package.json
@@ -1,23 +1,52 @@
 {
-    "name": "test",
-    "description": "xxxx",
-    "author": {
-        "name": "hzlzh"
-    },
-    "dependencies": {
-        "grunt": "~0.4.2",
-        "grunt-contrib-less": "~0.9.0",
-        "grunt-contrib-csslint": "~0.2.0",
-        "grunt-contrib-cssmin": "~0.8.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-compress": "~0.7.0",
-        "grunt-sprite": "~0.0.5",
-        "grunt-pngmin": "~0.6.1",
-        "grunt-timer": "~0.3.1",
-        "grunt-ftp-deploy": "~0.1.1",
-        "grunt-2x2x": "~0.1.3",
-        "gm": "~1.14.2"
+  "name": "f2e-workflow",
+  "description": "f2e-workflow is a cross-platform, efficient, smooth workflow for F2E project based on Grunt.",
+  "version": "1.5.6",
+  "homepage": "https://github.com/hzlzh/f2e-workflow",
+  "author": {
+    "name": "hzlzh",
+    "url": "https://github.com/hzlzh"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/hzlzh/f2e-workflow.git"
+  },
+  "bugs": {
+    "url": "https://github.com/hzlzh/f2e-workflow/issues"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://rem.mit-license.org/"
     }
+  ],
+  "engines": {
+    "node": ">= 0.8.0"
+  },
+  "scripts": {
+    "test": "grunt test"
+  },
+  "dependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-less": "~0.9.0",
+    "grunt-contrib-csslint": "~0.2.0",
+    "grunt-contrib-cssmin": "~0.8.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-compress": "~0.7.0",
+    "grunt-sprite": "~0.0.5",
+    "grunt-pngmin": "~0.6.1",
+    "grunt-timer": "~0.3.1",
+    "grunt-ftp-deploy": "~0.1.1",
+    "grunt-2x2x": "~0.1.3",
+    "gm": "~1.14.2"
+  },
+  "keywords": [
+    "gruntplugin"
+  ],
+  "files": [
+    "tasks",
+    "LICENSE-MIT"
+  ]
 }
