--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f2e-workflow",
   "description": "f2e-workflow is a cross-platform, efficient, smooth workflow for F2E project based on Grunt.",
-  "version": "1.6.2",
+  "version": "1.6.3",
   "homepage": "https://github.com/hzlzh/f2e-workflow",
   "author": {
     "name": "hzlzh",
@@ -44,7 +44,11 @@
     "gm": "~1.14.2"
   },
   "keywords": [
-    "gruntplugin"
+    "gruntplugin",
+    "yoman",
+    "f2e",
+    "workflow",
+    "sprite",
   ],
   "files": [
     "tasks",
