--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f2e-workflow",
   "description": "f2e-workflow is a cross-platform, efficient, smooth workflow for F2E project based on Grunt.",
-  "version": "1.6.3",
+  "version": "1.6.4",
   "homepage": "https://github.com/hzlzh/f2e-workflow",
   "author": {
     "name": "hzlzh",
@@ -48,7 +48,7 @@
     "yoman",
     "f2e",
     "workflow",
-    "sprite",
+    "sprite"
   ],
   "files": [
     "tasks",
