--- a/package.json
+++ b/package.json
@@ -1,58 +1,47 @@
 {
-  "name": "f2e-workflow",
-  "description": "f2e-workflow is a cross-platform, efficient, smooth workflow for F2E project based on Grunt.",
-  "version": "1.6.9",
-  "homepage": "https://github.com/hzlzh/f2e-workflow",
-  "author": {
-    "name": "hzlzh",
-    "url": "https://github.com/hzlzh"
-  },
+  "name": "tmtworkflow",
+  "version": "0.0.1",
+  "description": "tmt workflow",
   "repository": {
     "type": "git",
-    "url": "git://github.com/hzlzh/f2e-workflow.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hzlzh/f2e-workflow/issues"
+    "url": ""
   },
   "licenses": [
     {
-      "type": "MIT",
-      "url": "http://rem.mit-license.org/"
+      "type": "MIT"
     }
   ],
-  "engines": {
-    "node": ">= 0.10.0"
-  },
-  "scripts": {
-    "test": "grunt test"
-  },
   "dependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-less": "~0.9.0",
-    "grunt-contrib-csslint": "~0.2.0",
-    "grunt-contrib-cssmin": "~0.8.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-compress": "~0.7.0",
-    "grunt-sprite": "~0.0.5",
-    "grunt-pngmin": "~0.6.1",
-    "grunt-timestamp": "~0.0.7",
-    "grunt-ftp-deploy": "~0.1.1",
-    "grunt-2x2x": "~0.1.3",
-    "time-grunt": "~0.3.1",
-    "jit-grunt": "~0.7.0",
-    "gm": "~1.14.2"
+    "autoprefixer": "^6.3.3",
+    "browser-sync": "^2.11.1",
+    "del": "^2.2.0",
+    "gulp": "git://github.com/gulpjs/gulp#4.0",
+    "gulp-cssnano": "^2.1.1",
+    "gulp-ejs": "^2.1.1",
+    "gulp-ftp": "^1.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
+    "gulp-lazyimagecss": "^2.0.0",
+    "gulp-less": "^3.0.5",
+    "gulp-postcss": "^6.0.1",
+    "gulp-posthtml": "^1.5.2",
+    "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev-all": "^0.8.22",
+    "gulp-rev-delete-original": "^0.1.0",
+    "gulp-tmtsprite": "^0.0.20",
+    "gulp-uglify": "^1.5.3",
+    "gulp-usemin2": "^0.2.4",
+    "gulp-util": "^3.0.7",
+    "gulp-webp": "^2.3.0",
+    "gulp-zip": "^3.2.0",
+    "imagemin-pngquant": "^4.2.2",
+    "lodash": "^4.5.1",
+    "postcss-pxtorem": "^3.3.1",
+    "posthtml-px2rem": "^0.0.3",
+    "rc": "^1.1.6",
+    "rd": "^0.0.2",
+    "tmt-ejs-helper": "^0.0.1"
   },
-  "keywords": [
-    "gruntplugin",
-    "yoman",
-    "f2e",
-    "workflow",
-    "sprite"
-  ],
-  "files": [
-    "tasks",
-    "LICENSE-MIT"
-  ]
+  "readmeFilename": "README.md"
 }
