--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: node_js
 node_js:
-  - "0.10"
+  - "4.0.0"
 before_script:
-  - cd test
+  - cd project
   - npm install
-  - npm install -g grunt-cli
-  - grunt test
+  - gulp build
