--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ node_js:
   - "0.12.7"
   - "4.0.0"
 before_script:
-  - npm install -g gulp
+  - npm install -g gulpjs/gulp#4.0
   - cd project
   - npm install
-script: gulp
+script: gulp build
