--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: node_js
+cache:
+  directories:
+    - node_modules # Speed up npm install
 node_js:
   - "0.12.7"
   - "4.0.0"
 env:
-  global:
-    - CXX=g++-4.8
-  matrix:
-    - GIT_VERSION=default
-    - GIT_VERSION=edge
+  - CXX=g++-4.8
 addons:
   apt:
     sources:
