--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,12 +9,13 @@ clone_depth: 10
 
 environment:
   matrix:
-    - nodejs_version: 4
-    - nodejs_version: 5
+    - nodejs_version: 5.0.0
 # Install scripts. (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
+  - npm cache clean
+  - npm install -g gulpjs/gulp#4.0
   # install modules
   - npm install
 
