--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "posthtml-px2rem": "^0.0.3",
     "rc": "^1.1.6",
     "rd": "^0.0.2",
-    "tmt-ejs-helper": "^0.0.1"
+    "tmt-ejs-helper": "^0.0.1",
+    "crypto-md5": "^1.0.0"
   },
   "description": "A f2e project workflow based on Gulp",
   "repository": {
