--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "autoprefixer": "^6.3.3",
     "browser-sync": "^2.11.1",
+    "crypto-md5": "^1.0.0",
     "del": "^2.2.0",
     "gulp": "git://github.com/gulpjs/gulp#4.0",
     "gulp-cssnano": "^2.1.1",
@@ -29,10 +30,10 @@
     "lodash": "^4.5.1",
     "postcss-pxtorem": "^3.3.1",
     "posthtml-px2rem": "^0.0.3",
+    "quick-local-ip": "^1.0.7",
     "rc": "^1.1.6",
     "rd": "^0.0.2",
-    "tmt-ejs-helper": "^0.0.1",
-    "crypto-md5": "^1.0.0"
+    "tmt-ejs-helper": "^0.0.1"
   },
   "description": "A f2e project workflow based on Gulp",
   "repository": {
