--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tmt-workflow",
-  "version": "1.2.2",
+  "version": "1.3.2",
   "dependencies": {
     "autoprefixer": "^6.3.3",
     "browser-sync": "^2.11.1",
@@ -20,6 +20,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev-all": "^0.8.22",
     "gulp-rev-delete-original": "^0.1.0",
+    "gulp-sftp": "^0.1.4",
     "gulp-tmtsprite": "^0.0.20",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin2": "^0.2.4",
