--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "quick-local-ip": "^1.0.7",
     "rc": "^1.1.6",
     "rd": "^0.0.2",
-    "tmt-ejs-helper": "^0.0.1"
+    "tmt-ejs-helper": "^0.0.1",
+    "webpack-stream": "^3.2.0"
   },
   "description": "A f2e project workflow based on Gulp",
   "repository": {
