--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "1.4.3",
   "dependencies": {
     "autoprefixer": "^6.3.3",
+    "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.11.1",
     "crypto-md5": "^1.0.0",
     "del": "^2.2.0",
     "gulp": "git://github.com/gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.1",
     "gulp-ejs": "^2.1.1",
     "gulp-ftp": "^1.1.0",
