--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.3",
   "dependencies": {
     "autoprefixer": "^6.3.3",
+    "babel-core": "^6.10.4",
     "babel-preset-es2015": "^6.9.0",
     "browser-sync": "^2.11.1",
     "crypto-md5": "^1.0.0",
@@ -26,7 +27,7 @@
     "gulp-sftp": "^0.1.4",
     "gulp-tmtsprite": "^0.0.20",
     "gulp-uglify": "^1.5.3",
-    "gulp-usemin2": "^0.2.4",
+    "gulp-usemin": "^0.3.23",
     "gulp-util": "^3.0.7",
     "gulp-webp": "^2.3.0",
     "gulp-zip": "^3.2.0",
