--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "gulp-rev-delete-original": "^0.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sftp": "^0.1.4",
-    "gulp-tmtsprite": "^0.0.20",
+    "gulp-tmtsprite": "^0.0.22",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.23",
     "gulp-util": "^3.0.7",
@@ -39,7 +39,10 @@
     "rc": "^1.1.6",
     "rd": "^0.0.2",
     "tmt-ejs-helper": "^0.0.1",
-    "webpack-stream": "^3.2.0"
+    "webpack-stream": "^3.2.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-stage-2": "^6.11.0"
   },
   "description": "A f2e project workflow based on Gulp",
   "repository": {
