--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-stage-2": "^6.11.0",
     "browser-sync": "^2.11.1",
+    "cheerio": "^0.22.0",
     "crypto-md5": "^1.0.0",
     "del": "^2.2.0",
     "gulp": "git://github.com/gulpjs/gulp#4.0",
@@ -27,6 +28,9 @@
     "gulp-rev-delete-original": "^0.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sftp": "^0.1.4",
+    "gulp-svg-inline": "^1.0.1",
+    "gulp-svg-sprite": "^1.3.6",
+    "gulp-svgmin": "^1.2.3",
     "gulp-tmtsprite": "^0.0.22",
     "gulp-uglify": "^1.5.3",
     "gulp-usemin": "^0.3.23",
@@ -40,6 +44,7 @@
     "quick-local-ip": "^1.0.7",
     "rc": "^1.1.6",
     "rd": "^0.0.2",
+    "svg-to-png": "^3.1.2",
     "tmt-ejs-helper": "^0.0.1",
     "webpack-stream": "^3.2.0"
   },
