--- a/project/.tmtworkflowrc
+++ b/project/.tmtworkflowrc
@@ -40,5 +40,6 @@
 	"supportWebp": false,
 	"supportREM": true,
 	"supportChanged": false,
-	"reversion": true
+	"reversion": true,
+    "SVGGracefulDegradation": true
 }
